--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/journey">Journey</a>
-            <a href=#>CV</a>
+            <a href=https://docs.google.com/document/d/1nYvHWfR086t23pyYYqbduPhYwKpV-M90sGs35YxDBUE/edit?usp=sharing>CV</a>
           </nav>
         </header>
       </div>
