--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/journey">Journey</a>
-            <a href="{{ site.baseurl }}/resume.pdf" target="_blank">PDF.</a>
+            <a href="{{ site.baseurl }}/resume.pdf" target="_blank">PDF</a>
           </nav>
         </header>
       </div>
