--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/journey">Journey</a>
+            <a href="{{ site.baseurl }}/projects">Projects</a>
             <a href="{{ site.baseurl }}/resume.pdf" target="_blank">Résumé</a>
           </nav>
         </header>
