--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/projects">Projects</a>
-            <a href="{{ site.baseurl }}/resume.pdf" target="_blank">Résumé</a>
+<!--             <a href="{{ site.baseurl }}/resume.pdf" target="_blank">Résumé</a> -->
           </nav>
         </header>
       </div>
