--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm Deven. I do like to explore Machine Learngin stuffs and write about it here. I'm from Sabah, MY and I am a final year student from The University of Queensland, Australia.</p>
+    <p class="lead">Hi, I'm Deven. I like to explore Machine Learngin stuffs and write about it here. I'm from Sabah, MY and I am a final year student from The University of Queensland, Australia.</p>
   </div>
 </section>
