--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm Deven. I am a Deep Leearning Engineer at CertifAI. In my free time, I like to build a software project to explore new technologies. I'm from Sabah, MY.</p>
+    <p class="lead">Hi, I'm Deven. I am a Deep Leearning Engineer at CertifAI. In my free time, I like to build software projects to explore new technologies. I'm from Sabah, MY.</p>
   </div>
 </section>
