--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm Deven. I am an AI Engineer at Skymind. In my free time, I like to build software projects to explore new technologies. I'm from Sabah, Malaysia.</p>
+    <p class="lead">Hi, I'm Deven. I'm from Sabah, Malaysia. This blog is a documentation of my tutorials.</p>
   </div>
 </section>
