--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm Deven. I'm from Sabah, Malaysia. This blog is a documentation of my software engineering journey.</p>
+    <p class="lead">Deven Yantis. Software engineering blog.</p>
   </div>
 </section>
