--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Deven Yantis. Software engineering blog.</p>
+    <p class="lead">Deven Yantis 😎 Software engineering blog.</p>
   </div>
 </section>
