--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,10 @@
 // Typography
-@import url('https://fonts.googleapis.com/css?family=Overpass+Mono:400,700');
-$base-font-family: 'Overpass Mono', monospace;
+// @import url('https://fonts.googleapis.com/css?family=Overpass+Mono:400,700');
+// $base-font-family: 'Overpass Mono', monospace;
+// $heading-font-family: $base-font-family;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+$base-font-family: 'Roboto', sans-serif;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
