--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -3,7 +3,7 @@
 // $base-font-family: 'Overpass Mono', monospace;
 // $heading-font-family: $base-font-family;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 $base-font-family: 'Roboto', sans-serif;
 $heading-font-family: $base-font-family;
 
