--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -31,7 +31,8 @@ $medium-gray-color: #999;
 $light-gray-color: #ccc;
 
 // Font Colors
-$base-font-color: rgba($dark-gray-color, .8);
+// $base-font-color: rgba($dark-gray-color, .8);
+$base-font-color: $black-color;
 
 // Border
 $base-border-color: $light-gray-color;
