--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,10 +1,6 @@
 // Typography
-// @import url('https://fonts.googleapis.com/css?family=Overpass+Mono:400,700');
-// $base-font-family: 'Overpass Mono', monospace;
-// $heading-font-family: $base-font-family;
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
-$base-font-family: 'Roboto', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Overpass+Mono:400,700');
+$base-font-family: 'Overpass Mono', monospace;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
@@ -31,8 +27,7 @@ $medium-gray-color: #999;
 $light-gray-color: #ccc;
 
 // Font Colors
-// $base-font-color: rgba($dark-gray-color, .8);
-$base-font-color: $black-color;
+$base-font-color: rgba($dark-gray-color, .8);
 
 // Border
 $base-border-color: $light-gray-color;
